# UnityUIFlow

./: .gitignore  AGENTS.md  README.md  Start-McpServer.bat  Start-McpServer.ps1  TEST_FLOW.md  _tmp_list_tools.py  check_logs.py  check_logs18.py  check_result17.py  check_result18.py  http_stress_test.py  mcp_call.py  mcp_compile.py  mcp_compile_errors.py  mcp_compile_wait.py  mcp_ensure_ready.py  mcp_reset.py  mcp_run_test.py  read_steps.py  run_test.py  run_test2.py  temp_explore.cs  temp_test_repaint.cs  tools_list_parse.py  tools_list_raw.txt
Assets/: ForceRecompileDummy.cs  Test.cs
ProjectSettings/: UnityUIFlowSettings.asset
ci/: unity-uiflow.config.json
cocs/: 00-API速查与最佳实践.md  00-IMGUI控件自动化覆盖与限制说明.md  00-Overview.md  00-UIToolkit控件自动化覆盖与限制说明.md  00-开发路线图与交付物.md  00-架构设计与技术约束.md  IMGUI控件自动化覆盖与限制说明.md  IMGUI自动化测试方案设计.md  M01-用例编排与数据驱动-需求文档.md  M02-YAML解析与执行计划-需求文档.md  M03-执行引擎与运行控制-需求文档.md  M04-元素定位与等待-需求文档.md  M05-动作系统与CSharp扩展-需求文档.md  M06-Headed可视化执行-需求文档.md  M07-报告与截图-需求文档.md  M08-命令行与CI集成-需求文档.md  M09-测试基座与Fixture基类-需求文档.md  M10-测试用例说明与编写规范.md  (+4 more)
unitypilot/: .gitignore  ACCEPTANCE_TESTS.md  README.md  mcp.example.json  pyproject.toml  run_unitypilot_mcp.py
unitypilot/e2e-specs/examples/: smoke_unitypilot_window.yaml  uitoolkit_scroll_click_example.yaml  uitoolkit_scroll_offset_only_example.yaml  uitoolkit_scrollbar_drag_example.yaml
unitypilot/scripts/: run_acceptance_suite.py  run_uiflow_single_http.py
unitypilot/src/unitypilot_mcp/: main.py  mcp_stdio_server.py  server.py  tool_facade.py
unitypilot/src/unitypilot_mcp/editor_e2e/: actions.py
(+264 files in other folders)
